snapshots/syntax/library/functions/financial/rate/rate_do_while.snap
---
source: src/syntax/library/functions/financial/rate.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: DoStatement
      children:
        - kind: DoKeyword
          text: Do
        - kind: Whitespace
          text: " "
        - kind: WhileKeyword
          text: While
        - kind: Whitespace
          text: " "
        - kind: BinaryExpression
          children:
            - kind: CallExpression
              children:
                - kind: Identifier
                  text: Rate
                - kind: LeftParenthesis
                  text: (
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: nper
                    - kind: Comma
                      text: ","
                    - kind: Whitespace
                      text: " "
                    - kind: Argument
                      children:
                        - kind: UnaryExpression
                          children:
                            - kind: SubtractionOperator
                              text: "-"
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: pmt
                    - kind: Comma
                      text: ","
                    - kind: Whitespace
                      text: " "
                    - kind: Argument
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: pv
                - kind: RightParenthesis
                  text: )
            - kind: Whitespace
              text: " "
            - kind: LessThanOperator
              text: "<"
            - kind: Whitespace
              text: " "
            - kind: IdentifierExpression
              children:
                - kind: Identifier
                  text: targetRate
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: pmt
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: BinaryExpression
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: pmt
                    - kind: Whitespace
                      text: " "
                    - kind: AdditionOperator
                      text: +
                    - kind: Whitespace
                      text: " "
                    - kind: NumericLiteralExpression
                      children:
                        - kind: IntegerLiteral
                          text: "10"
                - kind: Newline
                  text: "\n"
        - kind: LoopKeyword
          text: Loop
        - kind: Newline
          text: "\n"
